Project - 4 : StopWatch 코드 정리 완료
- MVVM 패턴으로 만들게 되면 어떻게  변경되어야 하는지 고민해보기.

--- a/StopWatch/StopWatch/Home/Base.lproj/Main.storyboard
+++ b/StopWatch/StopWatch/Home/Base.lproj/Main.storyboard
@@ -36,21 +36,25 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-cz-10j">
-                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="랩1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-cz-10j">
+                                                    <rect key="frame" x="20" y="11" width="23" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7b-mN-58G">
-                                                    <rect key="frame" x="296" y="11" width="104" height="22"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7b-mN-58G">
+                                                    <rect key="frame" x="313" y="11" width="70" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Oh8-cz-10j" firstAttribute="top" secondItem="wsD-qC-XFO" secondAttribute="top" constant="11" id="HgM-3J-YtT"/>
+                                                <constraint firstItem="Oh8-cz-10j" firstAttribute="leading" secondItem="wsD-qC-XFO" secondAttribute="leading" constant="20" symbolic="YES" id="Pu0-5T-ha2"/>
+                                                <constraint firstItem="c7b-mN-58G" firstAttribute="leading" secondItem="Oh8-cz-10j" secondAttribute="trailing" constant="270" id="nrv-Ac-dJ3"/>
+                                                <constraint firstItem="c7b-mN-58G" firstAttribute="top" secondItem="wsD-qC-XFO" secondAttribute="top" constant="11" id="x7F-pz-K3v"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="lap" destination="Oh8-cz-10j" id="tEe-u6-igZ"/>
