--- a/StopWatch/StopWatch/Home/Base.lproj/Main.storyboard
+++ b/StopWatch/StopWatch/Home/Base.lproj/Main.storyboard
@@ -16,14 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiH-a6-jUF">
-                                <rect key="frame" x="60" y="77" width="294" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiH-a6-jUF">
+                                <rect key="frame" x="90.5" y="77" width="233.5" height="68.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="57"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uCs-K8-BvG">
-                                <rect key="frame" x="0.0" y="331" width="414" height="531"/>
+                                <rect key="frame" x="0.0" y="325.5" width="414" height="531"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="531" id="8fp-t1-2Zr"/>
@@ -37,23 +37,28 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="랩1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-cz-10j">
-                                                    <rect key="frame" x="20" y="11" width="23" height="21"/>
+                                                    <rect key="frame" x="20" y="11" width="23" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7b-mN-58G">
-                                                    <rect key="frame" x="313" y="11" width="70" height="21"/>
+                                                    <rect key="frame" x="288" y="11" width="98" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="98" id="w3O-KR-e4H"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="c7b-mN-58G" firstAttribute="centerY" secondItem="wsD-qC-XFO" secondAttribute="centerY" id="8Lb-hi-O2U"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="c7b-mN-58G" secondAttribute="trailing" constant="8" id="DHV-pA-WYe"/>
                                                 <constraint firstItem="Oh8-cz-10j" firstAttribute="top" secondItem="wsD-qC-XFO" secondAttribute="top" constant="11" id="HgM-3J-YtT"/>
                                                 <constraint firstItem="Oh8-cz-10j" firstAttribute="leading" secondItem="wsD-qC-XFO" secondAttribute="leading" constant="20" symbolic="YES" id="Pu0-5T-ha2"/>
-                                                <constraint firstItem="c7b-mN-58G" firstAttribute="leading" secondItem="Oh8-cz-10j" secondAttribute="trailing" constant="270" id="nrv-Ac-dJ3"/>
-                                                <constraint firstItem="c7b-mN-58G" firstAttribute="top" secondItem="wsD-qC-XFO" secondAttribute="top" constant="11" id="x7F-pz-K3v"/>
+                                                <constraint firstItem="c7b-mN-58G" firstAttribute="baseline" secondItem="Oh8-cz-10j" secondAttribute="baseline" id="Wti-dQ-2vp"/>
+                                                <constraint firstItem="c7b-mN-58G" firstAttribute="firstBaseline" secondItem="Oh8-cz-10j" secondAttribute="firstBaseline" id="y9T-tz-7FK"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -68,7 +73,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BOW-0t-lvO">
-                                <rect key="frame" x="40" y="211" width="80" height="80"/>
+                                <rect key="frame" x="40" y="195.5" width="80" height="80"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="d8Y-hZ-91e"/>
@@ -82,7 +87,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p92-F6-xvE">
-                                <rect key="frame" x="294" y="211" width="80" height="80"/>
+                                <rect key="frame" x="294" y="195.5" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.0" green="0.5" blue="0.030750562719999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="EFR-S8-D3r"/>
@@ -106,8 +111,7 @@
                             <constraint firstItem="p92-F6-xvE" firstAttribute="top" secondItem="BOW-0t-lvO" secondAttribute="top" id="MTQ-Jc-LLz"/>
                             <constraint firstItem="NiH-a6-jUF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="aEQ-zU-rZa"/>
                             <constraint firstItem="NiH-a6-jUF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gdj-jb-L4o"/>
-                            <constraint firstItem="NiH-a6-jUF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="m8y-Vf-K36"/>
-                            <constraint firstItem="uCs-K8-BvG" firstAttribute="top" secondItem="p92-F6-xvE" secondAttribute="bottom" constant="40" id="wfo-Bo-jxj"/>
+                            <constraint firstItem="uCs-K8-BvG" firstAttribute="top" secondItem="p92-F6-xvE" secondAttribute="bottom" constant="50" id="wfo-Bo-jxj"/>
                             <constraint firstItem="BOW-0t-lvO" firstAttribute="top" secondItem="NiH-a6-jUF" secondAttribute="bottom" constant="50" id="zOV-pN-Da3"/>
                         </constraints>
                     </view>
